added slider with images

--- a/index.html
+++ b/index.html
@@ -5,9 +5,29 @@
     <meta charset="utf-8"> 
     <title>Apex | LIFE Residential</title>
     <link rel="shortcut icon" href="./public/images/favicon.ico" />
+    <link rel='stylesheet' href='./public/css/reset.css' /> 
+    <link rel='stylesheet' href='./public/css/style.css' /> 
   </head>
 
   <body>
+
+    <section>
+      <nav>
+        <img src='./public/images/logo.png'>
+      </nav>
+
+      <div id='content'>
+        <div id="slider">
+          <figure>
+            <img src="./public/images/img1.jpg" alt="">
+            <img src="./public/images/img2.jpg" alt="">
+            <img src="./public/images/img3.jpg" alt="">
+            <img src="./public/images/img4.jpg" alt="">
+            <img src="./public/images/img5.jpg" alt="">
+          </figure>
+        </div>
+      </div>
+    </section>
     
   </body>
 
