--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <img src='./public/images/logo.png'>
       </nav>
 
-      <div id='content'>
-        <div id="slider">
+      <section id='content'>
+        <article id="slider">
           <figure>
             <img src="./public/images/img1.jpg" alt="">
             <img src="./public/images/img2.jpg" alt="">
@@ -25,8 +25,8 @@
             <img src="./public/images/img4.jpg" alt="">
             <img src="./public/images/img5.jpg" alt="">
           </figure>
-        </div>
-      </div>
+        </article>
+      </section>
     </section>
     
   </body>
