--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8"> 
     <title>Apex | LIFE Residential</title>
     <link rel="shortcut icon" href="./public/images/favicon.ico" />
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,500' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' href='./public/css/reset.css' /> 
     <link rel='stylesheet' href='./public/css/style.css' /> 
   </head>
@@ -13,7 +14,10 @@
 
     <section>
       <nav>
-        <img src='./public/images/logo.png'>
+        <article id='logo_and_name'>
+          <img src='./public/images/logo.png'>
+          <h1>Apex, Ealing W5</h1>
+        </article>
       </nav>
 
       <section id='content'>
@@ -23,7 +27,7 @@
             <img src="./public/images/img2.jpg" alt="">
             <img src="./public/images/img3.jpg" alt="">
             <img src="./public/images/img4.jpg" alt="">
-            <img src="./public/images/img5.jpg" alt="">
+            <img src="./public/images/img1.jpg" alt="">
           </figure>
         </article>
       </section>
