--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,500' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' href='./public/css/reset.css' /> 
     <link rel='stylesheet' href='./public/css/style.css' /> 
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   </head>
 
   <body>
