--- a/index.html
+++ b/index.html
@@ -16,9 +16,19 @@
     <section>
       <nav>
         <article id='logo_and_name'>
-          <img src='./public/images/logo.png'>
+          <a href='http://www.liferesidential.co.uk/'><img src='./public/images/logo.png'></a>
           <h1>Apex, Ealing W5</h1>
         </article>
+        <header>
+          <a href='#'><img id='index_icon' src='./public/images/index_icon.png'></a>
+          <ul>
+            <li><a href="#">Overview</a></li>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Area</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">About Us</a></li>
+          </ul>
+        </header>
       </nav>
 
       <section id='content'>
