fixed positioning of text on top of images

--- a/index.html
+++ b/index.html
@@ -13,35 +13,36 @@
 
   <body>
 
-    <section>
-      <nav>
-        <article id='logo_and_name'>
-          <a href='http://www.liferesidential.co.uk/'><img src='./public/images/logo.png'></a>
-          <h1>Apex, Ealing W5</h1>
-        </article>
-        <header>
-          <a href='#'><img id='index_icon' src='./public/images/index_icon.png'></a>
-          <ul>
-            <li><a href="#">Overview</a></li>
-            <li><a href="#">Features</a></li>
-            <li><a href="#">Area</a></li>
-            <li><a href="#">Contact Us</a></li>
-            <li><a href="#">About Us</a></li>
-          </ul>
-        </header>
-      </nav>
+    <nav>
+      <article id='logo_and_name'>
+        <a href='http://www.liferesidential.co.uk/'><img src='./public/images/logo.png'></a>
+        <h1>Apex, Ealing W5</h1>
+      </article>
+      <header>
+        <a href='#'><img id='index_icon' src='./public/images/index_icon.png'></a>
+        <ul>
+          <li><a href="#">Overview</a></li>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">Area</a></li>
+          <li><a href="#">Contact Us</a></li>
+          <li><a href="#">About Us</a></li>
+        </ul>
+      </header>
+    </nav>
+    <section id='start_text'>
+      <h2>Set to become <br>a major new skyline landmark</h2>  
+    </section>
 
-      <section id='content'>
-        <article id="slider">
-          <figure>
-            <img src="./public/images/img1.jpg" alt="">
-            <img src="./public/images/img2.jpg" alt="">
-            <img src="./public/images/img3.jpg" alt="">
-            <img src="./public/images/img4.jpg" alt="">
-            <img src="./public/images/img1.jpg" alt="">
-          </figure>
-        </article>
-      </section>
+    <section id='content'>
+      <article id="slider">
+        <figure>
+          <img src="./public/images/img1.jpg" alt="">
+          <img src="./public/images/img2.jpg" alt="">
+          <img src="./public/images/img3.jpg" alt="">
+          <img src="./public/images/img4.jpg" alt="">
+          <img src="./public/images/img1.jpg" alt="">
+        </figure>
+      </article>
     </section>
     
   </body>
