--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
         </figure>
       </article>
     </section>
+
+    <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
+    <script src='./public/js/app.js'></script>
     
   </body>
 
