--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
       </article>
     </section>
 
+    <section id='overview'>
+      <article>
+        <h1 class='title'>OVERVIEW</h1>
+        <p>Soaring to nearly 250 feet, The Apex is set to become a major new skyline landmark for one of West London’s most desirable and vibrant metropolitan town centres. Made up of two principal buildings - The Apex Tower and Garden Court - the development comprises 100 private sale 1, 2 and 3 bedroom apartments, each designed to Galliard Homes’ premier specification. Panoramic views meet luxury living accommodation in the twenty-level Apex Tower, set behind a striking glass and aluminium-clad facade. With all remaining two and three bedroom apartments featuring a private balcony, the tower also boasts a communal viewing gallery with aspect towards Central London’s iconic skyline. The Garden Court apartments, located immediately adjacent to the Tower, are perfectly arranged over the 7th and 8th floors and benefit from virtually immediate access to an extensive communal roof terrace – a landscaped and decked haven complete with privacy screen.</p>
+        </article>
+    </section>
+
     <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
     <script src='./public/js/app.js'></script>
     
