--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       <header>
         <a href='#'><img id='index_icon' src='./public/images/index_icon.png'></a>
         <ul>
-          <li><a href="#">Overview</a></li>
-          <li><a href="#">Features</a></li>
-          <li><a href="#">Area</a></li>
-          <li><a href="#">Contact Us</a></li>
-          <li><a href="#">About Us</a></li>
+          <li><a id='overview_link' href="#">Overview</a></li>
+          <li><a id='features_link' href="#">Features</a></li>
+          <li><a id='area_link' href="#">Area</a></li>
+          <li><a id='contact_link' href="#">Contact Us</a></li>
+          <li><a id='about_link' href="#">About Us</a></li>
         </ul>
       </header>
     </nav>
@@ -45,11 +45,27 @@
       </article>
     </section>
 
-    <section id='overview'>
-      <article>
+    <section id='full_content'>
+      <article id='overview'>
         <h1 class='title'>OVERVIEW</h1>
-        <p>Soaring to nearly 250 feet, The Apex is set to become a major new skyline landmark for one of West London’s most desirable and vibrant metropolitan town centres. Made up of two principal buildings - The Apex Tower and Garden Court - the development comprises 100 private sale 1, 2 and 3 bedroom apartments, each designed to Galliard Homes’ premier specification. Panoramic views meet luxury living accommodation in the twenty-level Apex Tower, set behind a striking glass and aluminium-clad facade. With all remaining two and three bedroom apartments featuring a private balcony, the tower also boasts a communal viewing gallery with aspect towards Central London’s iconic skyline. The Garden Court apartments, located immediately adjacent to the Tower, are perfectly arranged over the 7th and 8th floors and benefit from virtually immediate access to an extensive communal roof terrace – a landscaped and decked haven complete with privacy screen.</p>
+        <p>
+        Soaring to nearly 250 feet, The Apex is set to become a major new skyline landmark for one of West London’s most desirable and vibrant metropolitan town centres. Made up of two principal buildings - The Apex Tower and Garden Court - the development comprises 100 private sale 1, 2 and 3 bedroom apartments, each designed to Galliard Homes’ premier specification. Panoramic views meet luxury living accommodation in the twenty-level Apex Tower, set behind a striking glass and aluminium-clad facade. With all remaining two and three bedroom apartments featuring a private balcony, the tower also boasts a communal viewing gallery with aspect towards Central London’s iconic skyline. The Garden Court apartments, located immediately adjacent to the Tower, are perfectly arranged over the 7th and 8th floors and benefit from virtually immediate access to an extensive communal roof terrace – a landscaped and decked haven complete with privacy screen.
+        </p>
+      </article>
+      <img src='./public/images/site_plan.jpg'>
+      <article id='features'>
+        <article>
+          <h1>FEATURES</h1>
+          <ul>
+            <li>Daytime Concierge</li>
+            <li>Secure underground parking available on selected units</li>
+            <li>Communal viewing gallery within Apex Tower</li>
+            <li>Striking landscaped terrace on 7th floor level of Garden Court</li>
+            <li>Video entry phone system to each apartment</li>
+            <li>Many apartment featuring a private balcony</li>
+          </ul>
         </article>
+      </article>
     </section>
 
     <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
