added dropdown menu to first index page

--- a/index.html
+++ b/index.html
@@ -19,8 +19,19 @@
         <h1>Apex, Ealing W5</h1>
       </article>
       <header>
-        <a href='#'><img id='index_icon' src='./public/images/index_icon.png'></a>
-        <ul>
+        <ul id='index_nav'>
+          <li>
+            <a href='#'><img id='index_icon' src='./public/images/index_icon.png'></a>
+              <ul>
+                <li><a href="#">Overview</a></li>
+                <li><a href="#">Features</a></li>
+                <li><a href="#">Area</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">About Us</a></li>
+              </ul>
+          </li>
+        </ul>
+        <ul id='inline_nav'>
           <li><a id='overview_link' href="#">Overview</a></li>
           <li><a id='features_link' href="#">Features</a></li>
           <li><a id='area_link' href="#">Area</a></li>
