--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </section>
 
     <section id='full_content'>
-      <article id='overview'>
+      <article class='text_article' id='overview'>
         <h1 class='title'>OVERVIEW</h1>
         <p>
         Soaring to nearly 250 feet, The Apex is set to become a major new skyline landmark for one of West London’s most desirable and vibrant metropolitan town centres. Made up of two principal buildings - The Apex Tower and Garden Court - the development comprises 100 private sale 1, 2 and 3 bedroom apartments, each designed to Galliard Homes’ premier specification. Panoramic views meet luxury living accommodation in the twenty-level Apex Tower, set behind a striking glass and aluminium-clad facade. With all remaining two and three bedroom apartments featuring a private balcony, the tower also boasts a communal viewing gallery with aspect towards Central London’s iconic skyline. The Garden Court apartments, located immediately adjacent to the Tower, are perfectly arranged over the 7th and 8th floors and benefit from virtually immediate access to an extensive communal roof terrace – a landscaped and decked haven complete with privacy screen.
@@ -78,6 +78,12 @@
             <li>Many apartment featuring a private balcony</li>
           </ul>
         </article>
+      </article>
+      <article class='text_article' id='local_area'>
+        <h1>LOCAL AREA</h1>
+        <p>
+        A leafy West London neighbourhood, Ealing is often referred to as “Queen of the Suburbs”. Historically a rural village, Ealing has undergone a massive transformation into a major metropolitan centre and has formed part of Greater London since 1995. Whilst retaining a strong link with its notable past, the town is today alive with an eclectic mix of international cuisine, restaurants, bars, street cafes, shopping centres and galleries. Together with fantastic transport links connecting the town centre to Central London, Ealing continues to attract residents seeking all the advantages of London living but with a countryside charm.
+        </p>
       </article>
     </section>
 
