--- a/index.html
+++ b/index.html
@@ -79,20 +79,55 @@
           </ul>
         </article>
       </article>
-      <article class='text_article' id='area_and_transport'>
-        <article id='local_area'>
-          <h1>LOCAL AREA</h1>
-          <p>
-          A leafy West London neighbourhood, Ealing is often referred to as “Queen of the Suburbs”. Historically a rural village, Ealing has undergone a massive transformation into a major metropolitan centre and has formed part of Greater London since 1995. Whilst retaining a strong link with its notable past, the town is today alive with an eclectic mix of international cuisine, restaurants, bars, street cafes, shopping centres and galleries. Together with fantastic transport links connecting the town centre to Central London, Ealing continues to attract residents seeking all the advantages of London living but with a countryside charm.
-          </p>
-        </article>
-        <article id='transport'>
-          <h1>TRANSPORT</h1>
-          <p>
-          The Apex is conveniently positioned within a ten minute walk of Ealing Broadway underground station serving the Central and District lines into Central London and the West End. With a new Crossrail station at Ealing Broadway scheduled to commence in 2017, journey times into the City of London will be cut to just 18 minutes.
-          </p>        
-        </article>
+      <article class='text_article' id='local_area'>
+        <h1>LOCAL AREA</h1>
+        <p>
+        A leafy West London neighbourhood, Ealing is often referred to as “Queen of the Suburbs”. Historically a rural village, Ealing has undergone a massive transformation into a major metropolitan centre and has formed part of Greater London since 1995. Whilst retaining a strong link with its notable past, the town is today alive with an eclectic mix of international cuisine, restaurants, bars, street cafes, shopping centres and galleries. Together with fantastic transport links connecting the town centre to Central London, Ealing continues to attract residents seeking all the advantages of London living but with a countryside charm.
+        </p>
+        <table id='retail_outlets'>
+          <tr>
+            <th colspan="2">Retail outlets</th>
+          </tr>
+          <tr>
+            <td>Marks & Spencer</td>
+            <td>River Island</td>
+          </tr>
+          <tr>
+            <td>Tesco Metro</td>
+            <td>Waterstones</td>
+          </tr>
+          <tr>
+            <td>Waitrose</td>
+            <td>JD Sports</td>
+          </tr>
+          <tr>
+            <td>Next</td>
+            <td>Fat Face</td>
+          </tr>
+          <tr>
+            <td>Monsoon</td>
+            <td>WH Smith</td>
+          </tr>
+          <tr>
+            <td>Mothercare</td>
+            <td>The Body Shop</td>
+          </tr>
+          <tr>
+            <td>Boots</td>
+            <td>Tie Rack</td>
+          </tr>
+          <tr>
+            <td>Sainsbury Local</td>
+            <td></td>
+          </tr>
+        </table>
       </article>
+<!--       <article id='transport'>
+        <h1>TRANSPORT</h1>
+        <p>
+        The Apex is conveniently positioned within a ten minute walk of Ealing Broadway underground station serving the Central and District lines into Central London and the West End. With a new Crossrail station at Ealing Broadway scheduled to commence in 2017, journey times into the City of London will be cut to just 18 minutes.
+        </p>        
+      </article> -->
     </section>
 
     <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
