fixed positioning of tables

--- a/index.html
+++ b/index.html
@@ -84,43 +84,115 @@
         <p>
         A leafy West London neighbourhood, Ealing is often referred to as “Queen of the Suburbs”. Historically a rural village, Ealing has undergone a massive transformation into a major metropolitan centre and has formed part of Greater London since 1995. Whilst retaining a strong link with its notable past, the town is today alive with an eclectic mix of international cuisine, restaurants, bars, street cafes, shopping centres and galleries. Together with fantastic transport links connecting the town centre to Central London, Ealing continues to attract residents seeking all the advantages of London living but with a countryside charm.
         </p>
-        <table id='retail_outlets'>
-          <tr>
-            <th colspan="2">Retail outlets</th>
-          </tr>
-          <tr>
-            <td>Marks & Spencer</td>
-            <td>River Island</td>
-          </tr>
-          <tr>
-            <td>Tesco Metro</td>
-            <td>Waterstones</td>
-          </tr>
-          <tr>
-            <td>Waitrose</td>
-            <td>JD Sports</td>
-          </tr>
-          <tr>
-            <td>Next</td>
-            <td>Fat Face</td>
-          </tr>
-          <tr>
-            <td>Monsoon</td>
-            <td>WH Smith</td>
-          </tr>
-          <tr>
-            <td>Mothercare</td>
-            <td>The Body Shop</td>
-          </tr>
-          <tr>
-            <td>Boots</td>
-            <td>Tie Rack</td>
-          </tr>
-          <tr>
-            <td>Sainsbury Local</td>
-            <td></td>
-          </tr>
-        </table>
+        <article id='tables'>
+          <table id='retail_outlets'>
+            <tr>
+              <th colspan="2">Retail outlets</th>
+            </tr>
+            <tr>
+              <td>Marks & Spencer</td>
+              <td>River Island</td>
+            </tr>
+            <tr>
+              <td>Tesco Metro</td>
+              <td>Waterstones</td>
+            </tr>
+            <tr>
+              <td>Waitrose</td>
+              <td>JD Sports</td>
+            </tr>
+            <tr>
+              <td>Next</td>
+              <td>Fat Face</td>
+            </tr>
+            <tr>
+              <td>Monsoon</td>
+              <td>WH Smith</td>
+            </tr>
+            <tr>
+              <td>Mothercare</td>
+              <td>The Body Shop</td>
+            </tr>
+            <tr>
+              <td>Boots</td>
+              <td>Tie Rack</td>
+            </tr>
+            <tr>
+              <td>Sainsbury Local</td>
+              <td></td>
+            </tr>
+          </table>
+          <table id='leisure'>
+            <tr>
+              <th colspan="2">Leisure</th>
+            </tr>
+            <tr>
+              <td>Questors Theatre</td>
+              <td>Walpole Park</td>
+            </tr>
+            <tr>
+              <td>Virgin Active</td>
+              <td>Ealing Cricket Club</td>
+            </tr>
+            <tr>
+              <td>Ealing Squash & Fitness</td>
+              <td>Ealing Golf Club</td>
+            </tr>
+            <tr>
+              <td>Trailfinders Sports Complex</td>
+              <td>Ealing Rugby Club</td>
+            </tr>
+            <tr>
+              <td>Gurnell Swimming Baths</td>
+              <td>Ealing Common</td>
+            </tr>
+            <tr>
+              <td>Mothercare</td>
+              <td>The Body Shop</td>
+            </tr>
+            <tr>
+              <td>Pitzhanger Manor Museum</td>
+              <td>Haven Green Park</td>
+            </tr>
+          </table>
+          <table id='restaurants_bars_eateries'>
+            <tr>
+              <th colspan="2">Restaurants, bars & eateries</th>
+            </tr>
+            <tr>
+              <td>Carluccio's</td>
+              <td>La Siesta</td>
+            </tr>
+            <tr>
+              <td>Charlotte's Place</td>
+              <td>The Green</td>
+            </tr>
+            <tr>
+              <td>Osteria Del Portico</td>
+              <td>The Haven</td>
+            </tr>
+            <tr>
+              <td>Nip Japanese Teppanyaki</td>
+              <td>The Town House</td>
+            </tr>
+            <tr>
+              <td>Okawari</td>
+              <td>Chandlers</td>
+            </tr>
+            <tr>
+              <td>Café Rouge</td>
+              <td>Starbucks</td>
+            </tr>
+            <tr>
+              <td>Gourmet Burger Kitchen</td>
+              <td>Costa Coffee</td>
+            </tr>
+            <tr>
+              <td>Bella Italia</td>
+              <td>Pizza Hut</td>
+            </tr>
+          </table>
+        </article>
       </article>
 <!--       <article id='transport'>
         <h1>TRANSPORT</h1>
