--- a/index.html
+++ b/index.html
@@ -194,12 +194,17 @@
           </table>
         </article>
       </article>
-<!--       <article id='transport'>
+      <article class='text_article' id='transport'>
         <h1>TRANSPORT</h1>
         <p>
-        The Apex is conveniently positioned within a ten minute walk of Ealing Broadway underground station serving the Central and District lines into Central London and the West End. With a new Crossrail station at Ealing Broadway scheduled to commence in 2017, journey times into the City of London will be cut to just 18 minutes.
-        </p>        
-      </article> -->
+        The Apex is situated fronting Uxbridge Road - the principal artery connecting Notting Hill, Bayswater Road and Oxford Street direct. The apartments are within 10 minutes walk of Ealing Broadway tube and mainline hub - linking Paddington to Heathrow terminals 1 - 3. For residents at The Apex, London Heathrow will be a 24 minute hop with services every 30 minutes, 7 days a week.<br>
+        Tube connections are equally impressive, with the Capital’s world famous shopping streets within 25 minutes, Knightsbridge 26 and the heart of financial London less than 10 minutes more.<br>
+        From a buzzing yet rural town centre dominated by its conservation areas and beautiful parkland, to the Capital’s principal landmarks in around half an hour surely acknowledges The Apex as an exceptional lifestyle opportunity in a most accessible location.
+        </p>       
+      </article>
+      <article id='tube_map'>
+        <img src='./public/images/tube_map.png'> 
+      </article>
     </section>
 
     <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
