adjusted positioning of tube_map

--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
       </article>
       <article id='tube_map'>
         <img src='./public/images/tube_map.png'> 
+        <img id="distance_tube" src='./public/images/distance_tube.png'>
       </article>
     </section>
 
