--- a/index.html
+++ b/index.html
@@ -206,6 +206,24 @@
         <img src='./public/images/tube_map.png'> 
         <img id="distance_tube" src='./public/images/distance_tube.png'>
       </article>
+      <article id='contact_form' class='text_article'>
+        <form>
+          <label>First Name</label><br>
+          <input type='text' name='name'><br>
+          <label>Last Name</label><br>
+          <input type='text' name='surname'><br>
+          <label>Email Address</label><br>
+          <input type='email' name='email'><br>
+          <label>Telephone Number</label><br>
+          <input type='text' name='phone'><br>
+          <input type='checkbox' value='letting'><label>Lettings</label>
+          <input type='checkbox' value='sales'><label>Sales</label>
+          <input type='checkbox' value='general_enquiry'><label>General Enquiry</label><br>
+          <label>Message</label><br>
+          <textarea></textarea><br>
+          <input type="submit" value="Submit">
+        </form>
+      </article>
     </section>
 
     <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
