--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
         <img id="distance_tube" src='./public/images/distance_tube.png'>
       </article>
       <article id='contact_form' class='text_article'>
+        <h1>CONTACT US</h1>
         <form>
           <label>First Name</label><br>
           <input type='text' name='name'><br>
