added about us text but needs css

--- a/index.html
+++ b/index.html
@@ -206,24 +206,32 @@
         <img src='./public/images/tube_map.png'> 
         <img id="distance_tube" src='./public/images/distance_tube.png'>
       </article>
-      <article id='contact_form' class='text_article'>
-        <h1>CONTACT US</h1>
-        <form>
-          <label>First Name</label><br>
-          <input type='text' name='name'><br>
-          <label>Last Name</label><br>
-          <input type='text' name='surname'><br>
-          <label>Email Address</label><br>
-          <input type='email' name='email'><br>
-          <label>Telephone Number</label><br>
-          <input type='text' name='phone'><br>
-          <input type='checkbox' value='letting'><label>Lettings</label>
-          <input type='checkbox' value='sales'><label>Sales</label>
-          <input type='checkbox' value='general_enquiry'><label>General Enquiry</label><br>
-          <label>Message</label><br>
-          <textarea></textarea><br>
-          <input type="submit" value="Submit">
-        </form>
+      <article id='form_and_about' class='text_article'>
+        <article id='contact_form'>
+          <h1>CONTACT US</h1>
+          <form>
+            <label>First Name</label><br>
+            <input type='text' name='name'><br>
+            <label>Last Name</label><br>
+            <input type='text' name='surname'><br>
+            <label>Email Address</label><br>
+            <input type='email' name='email'><br>
+            <label>Telephone Number</label><br>
+            <input type='text' name='phone'><br>
+            <input type='checkbox' value='letting'><label>Lettings</label>
+            <input type='checkbox' value='sales'><label>Sales</label>
+            <input type='checkbox' value='general_enquiry'><label>General Enquiry</label><br>
+            <label>Message</label><br>
+            <textarea></textarea><br>
+            <input type="submit" value="Submit">
+          </form>
+        </article>
+        <article id='about_us'>
+          <h1>ABOUT US</h1>
+          <p>
+            Founded in 2000 by a team of highly experienced UK property experts, we have now grown to be one of the countries leading privately owned Estate Agencies, spanning all postcodes in London from tube zones 1-6. Our Branches are strategically placed right across the Capital to efficiently manage thousands of apartments in hundreds of the finest developments
+          </p>
+        </article>
       </article>
     </section>
 
