fixed positioning of text about us

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <img src='./public/images/tube_map.png'> 
         <img id="distance_tube" src='./public/images/distance_tube.png'>
       </article>
-      <article id='form_and_about' class='text_article'>
+      <article id='form_and_about'>
         <article id='contact_form'>
           <h1>CONTACT US</h1>
           <form>
