fixed view of about us

--- a/index.html
+++ b/index.html
@@ -229,8 +229,9 @@
         <article id='about_us'>
           <h1>ABOUT US</h1>
           <p>
-            Founded in 2000 by a team of highly experienced UK property experts, we have now grown to be one of the countries leading privately owned Estate Agencies, spanning all postcodes in London from tube zones 1-6. Our Branches are strategically placed right across the Capital to efficiently manage thousands of apartments in hundreds of the finest developments
+            Founded in 2000 by a team of highly experienced UK property experts, Life Residential has now grown to be one of the countries leading privately owned Estate Agencies, spanning all postcodes in London from tube zones 1-6. Our Branches are strategically placed right across the Capital to efficiently manage thousands of apartments in hundreds of the finest developments.
           </p>
+          <img src='./public/images/cars1.jpg'>
         </article>
       </article>
     </section>
