--- a/index.html
+++ b/index.html
@@ -234,6 +234,18 @@
           <img src='./public/images/cars1.jpg'>
         </article>
       </article>
+
+      <footer>
+        <h1>LIFE </h1><h2>Residential</h1>
+        <p>
+        Phone: 0208 896 9990 Ext. 403<br>
+        Fax: 0208 896 4475<br>
+        Email: tom.symonds@liferesidential.co.uk<br>
+        Address: Unit 2 Portal West Business Centre, 6 Portal Way, London, W3 6RU<br>
+        <a href='http://www.liferesidential.co.uk/'>www.liferesidential.co.uk</a><br>
+        </p>
+
+      </footer>
     </section>
 
     <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
