--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
         </ul>
       </nav>
     </header>
-    <section id='start_text'>
-      <h2>Set to become <br>a major new skyline landmark</h2>  
-    </section>
 
-    <section id='content'>
+    <section id='slider_content'>
+      <article id='start_text'>
+        <h2>Set to become <br>a major new skyline landmark</h2>  
+      </article>
       <article id="slider">
         <figure>
           <img src="./public/images/img1.jpg" alt="">
