created class for orange background

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <article id='site_plan'>
         <img src='./public/images/site_plan.jpg'>
       </article>
-      <article id='features'>
+      <article class='orange_article' id='features'>
         <article>
           <h1>FEATURES</h1>
           <ul>
@@ -206,7 +206,7 @@
         <img src='./public/images/tube_map.png'> 
         <img id="distance_tube" src='./public/images/distance_tube.png'>
       </article>
-      <article id='form_and_about'>
+      <article class='orange_article' id='form_and_about'>
         <article id='contact_form'>
           <h1>CONTACT US</h1>
           <form>
