--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8"> 
     <title>Apex | LIFE Residential</title>
     <link rel="shortcut icon" href="./public/images/favicon.ico" />
-    <link href='http://fonts.googleapis.com/css?family=Raleway:400,500' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' href='./public/css/reset.css' /> 
     <link rel='stylesheet' href='./public/css/style.css' /> 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
